Added some missing translations.

--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-07-21 16:13+0300\n"
-"PO-Revision-Date: 2007-07-29 09:43+0100\n"
+"PO-Revision-Date: 2007-07-29 11:53+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -306,6 +306,10 @@ msgid ""
 "only until it writes it. You should back the file up prior to using this "
 "script."
 msgstr ""
+"Var B<extremt försiktigt> när du använder det här verktyget - det kanske "
+"inte är 100 % säkert. cleanup-info försöker vara försiktigt med din "
+"info-katalogfil, men bara fram tills att det skriver till den. Du bör säkerhetskopiera "
+"filen innan du använder skriptet."
 
 # type: TP
 #: ../../man/cleanup-info.8:31
@@ -316,12 +320,12 @@ msgstr "B<--unsafe>"
 # type: Plain text
 #: ../../man/cleanup-info.8:34
 msgid "Set some additional possibly useful options."
-msgstr ""
+msgstr "Ställer in ytterligare några antagligen användbara flaggor."
 
 # type: Plain text
 #: ../../man/cleanup-info.8:36
 msgid "B<Warning: the `--unsafe' option may garble an otherwise correct file!>"
-msgstr ""
+msgstr "B<Varning: flaggar \"--unsafe\" kan skriva sönder en annars korrekt fil!>"
 
 # type: TP
 #: ../../man/cleanup-info.8:36 ../../man/dpkg.1:235
@@ -399,21 +403,22 @@ msgid ""
 "The info directory file. The lock file is named the same, with \".lock\" "
 "suffix."
 msgstr ""
+"Info-katalogfilen. Låsfilen heter detsamma, med ändelsen \".lock\"."
 
 # type: Plain text
 #: ../../man/cleanup-info.8:50
 msgid "Probably many."
-msgstr ""
+msgstr "Antagligen flera."
 
 # type: Plain text
 #: ../../man/cleanup-info.8:54
 msgid "B<install-info>(8), B<info>(1)."
-msgstr ""
+msgstr "B<install-info>(8), B<info>(1)."
 
 # type: Plain text
 #: ../../man/cleanup-info.8:56
 msgid "Copyright (C) 1996 Kim-Minh Kaplan"
-msgstr ""
+msgstr "Upphovsrättsskyddat © 1996 Kim-Minh Kaplan"
 
 # type: Plain text
 #: ../../man/cleanup-info.8:58 ../../man/deb-substvars.5:142
@@ -1173,12 +1178,12 @@ msgstr "2007-03-07"
 # type: Plain text
 #: ../../man/deb-override.5:19
 msgid "deb-override - Debian archive override file"
-msgstr ""
+msgstr "deb-override - Debianarkivets överstyrningsfil"
 
 # type: Plain text
 #: ../../man/deb-override.5:22
 msgid "override"
-msgstr ""
+msgstr "override"
 
 # type: Plain text
 #: ../../man/deb-override.5:29
@@ -1189,6 +1194,17 @@ msgid ""
 "rather than the actual dependencies and description of the package.  This "
 "information is found in the override file."
 msgstr ""
+"Även om huvuddelen av informationen om ett paket finns i kontrollfilen "
+"måste en del fyllas i av distributionstsarerna snarare än paketansvariga, "
+"eftersom de handlar om hur filer arrangeras för utgivningen snarare än "
+"faktiska beroenden och beskrivningen av paketet. Denna informationen "
+"finns i filen \"override\"."
+""
+"While most information about a package can be found in the control file, "
+"some must be filled in by the distribution czars rather than by the "
+"maintainer, because they relate to the arrangement of files for release "
+"rather than the actual dependencies and description of the package.  This "
+"information is found in the override file."
 
 # type: Plain text
 #: ../../man/deb-override.5:33
@@ -1196,11 +1212,13 @@ msgid ""
 "The override file has a simple whitespace-delimited format. Comments are "
 "allowed (denoted with a B<#>)."
 msgstr ""
+"Filen override har ett enkelt blanksteg-avdelat format. Kommentarer är "
+"tillåtna (markeras med ett B<#>)."
 
 # type: Plain text
 #: ../../man/deb-override.5:39
 msgid "I<package> I<priority> I<section> [I<maintainerinfo>]"
-msgstr ""
+msgstr "I<paket> I<prioritet> I<sektion> [I<ansvariginfo>]"
 
 # type: Plain text
 #: ../../man/deb-override.5:44
@@ -1208,6 +1226,8 @@ msgid ""
 "I<package> is the name of the package. Entries in the override file for "
 "packages not found in the tree of binary packages are ignored."
 msgstr ""
+"I<paket> är namnet på paketet. Poster i filen override för paket som inte "
+"finns i trädet med binära paket ignoreras."
 
 # type: Plain text
 #: ../../man/deb-override.5:53
@@ -1216,6 +1236,9 @@ msgid ""
 "ought not to be found in the control file. If the package is found in a "
 "subdirectory of I<binarydir>, that will be checked against I<section>."
 msgstr ""
+"I<prioritet> och I<sektion> placerar paketet i utgivningsträdet, dessa "
+"bör inte förekomma i kontrollfilen. Om paketet finns i en underkatalog "
+"av I<binärkatalog> kommer den att kontrolleras mot I<sektion>."
 
 # type: Plain text
 #: ../../man/deb-override.5:61
@@ -1224,6 +1247,9 @@ msgid ""
 "unconditional override, or else I<oldmaintainer> B<=E<gt>> I<newmaintainer> "
 "to perform a substitution."
 msgstr ""
+"I<ansvariginfo> kan, om det anges, antingen vara namnet på en paketansvarig "
+"för en ovillkorlig överstyrning, eller I<gammal-ansvarig> B<=E<gt>> I<ny-ansvarig> "
+"för att utföra en substituering."
 
 # type: Plain text
 #: ../../man/deb-override.5:66
@@ -1231,6 +1257,8 @@ msgid ""
 "The override files used to make the official Packages lists may be found in "
 "the I<indices> directory on any Debian mirror."
 msgstr ""
+"De override-filer som används för att skapa den officiella listan över paket "
+"(\"Packages\") finns i I<indices>-katalogen på alla Debianspeglar."
 
 # type: Plain text
 #: ../../man/deb-override.5:70
@@ -1241,7 +1269,7 @@ msgstr "B<dpkg-scanpackages>(1), B<dpkg-scansources>(1), B<apt-ftparchive>(1)."
 #: ../../man/deb-shlibs.5:16
 #, no-wrap
 msgid "deb-shlibs"
-msgstr ""
+msgstr "deb-shlibs"
 
 # type: TH
 #: ../../man/deb-shlibs.5:16
@@ -1252,12 +1280,12 @@ msgstr "2007-03-08"
 # type: Plain text
 #: ../../man/deb-shlibs.5:19
 msgid "deb-shlibs - Debian shared library information file"
-msgstr ""
+msgstr "deb-shlibs - Debians informationsfil för delade bibliotek"
 
 # type: Plain text
 #: ../../man/deb-shlibs.5:22
 msgid "shlibs"
-msgstr ""
+msgstr "shlibs"
 
 # type: Plain text
 #: ../../man/deb-shlibs.5:26
@@ -1265,11 +1293,13 @@ msgid ""
 "The format for a shared library dependency information entry in these files "
 "is (see the Debian Policy Manual for details):"
 msgstr ""
+"Formatet för en post med beroendeinformation för ett delat bibliotek i "
+"dessa filer är (se Debians policyhandbok för detaljer):"
 
 # type: Plain text
 #: ../../man/deb-shlibs.5:28
 msgid "E<lt>library nameE<gt> E<lt>version/sonameE<gt> E<lt>dependenciesE<gt>"
-msgstr ""
+msgstr "E<lt>biblioteksnamnE<gt> E<lt>version/sonamnE<gt> E<lt>beroendenE<gt>"
 
 # type: TP
 #: ../../man/deb-shlibs.5:30
@@ -1285,7 +1315,7 @@ msgstr "deb-substvars"
 # type: Plain text
 #: ../../man/deb-substvars.5:5
 msgid "deb-substvars - Debian source substitution variables"
-msgstr ""
+msgstr "deb-substvars - Debians källkods-substitueringsvariabler"
 
 # type: TP
 #: ../../man/deb-substvars.5:8
@@ -1300,6 +1330,10 @@ msgid ""
 "and to standard output for B<dpkg-gencontrol> and B<dpkg-genchanges>)  they "
 "perform some variable substitutions on the output file."
 msgstr ""
+"Innan B<dpkg-source>, B<dpkg-gencontrol> och B<dpkg-genchanges> skriver "
+"sin kontrollinformation (till control-filen i källkodspaketet B<.dsc> för B<dpkg-source> "
+"och till standard ut för B<dpkg-gencontrol> och B<dpkg-genchanges>) kommer de "
+"utföra viss variabelsubstituering på utdatafilen."
 
 # type: Plain text
 #: ../../man/deb-substvars.5:26
@@ -1310,6 +1344,12 @@ msgid ""
 "left; the full text of the field after the substitution is rescanned to look "
 "for more substitutions."
 msgstr ""
+"En variabelsubstitution har formen B<${>I<variabelnamn>B<}>. "
+"Variabelnamn består av alfanumeriska tecken, bindestreck och kolon "
+"och börjar med ett alfanumeriskt tecken. Variabelsubstitueringar utförs "
+"upprepade gånger tills det inte kvarstår några - det resulterande "
+"innehållet i fältet läses av på nytt efter substitueringen för att se om det "
+"behövs fler substitueringar."
 
 # type: Plain text
 #: ../../man/deb-substvars.5:33
@@ -1317,6 +1357,8 @@ msgid ""
 "After all the substitutions have been done each occurrence of the string B<"
 "${}> (which is not a legal substitution) is replaced with a B<$> sign."
 msgstr ""
+"När alla substitueringar har utförts ersätts varje förekomst av strängen "
+"B<${}> (som inte är en giltig substituering) med ett B<$>-tecken."
 
 # type: Plain text
 #: ../../man/deb-substvars.5:46
@@ -1327,22 +1369,27 @@ msgid ""
 "I<name>B<=>I<value>.  Trailing whitespace on each line, blank lines, and "
 "lines starting with a B<#> symbol (comments) are ignored."
 msgstr ""
+"Variabler kan sättas genom att använda kommandoradsflaggan B<-V>. De "
+"kan även anges i filen B<debian/substvars> (eller vilken som helst annan "
+"fil som anges med flaggan B<-T>). FIlen består av rader på formen "
+"I<namn>B<=>I<värde>. Avslutande blanksteg på en rad, blanka rader och "
+"rader som börjar med en B<#>-symbol (kommentarer) ignoreras."
 
 # type: Plain text
 #: ../../man/deb-substvars.5:48
 msgid "Additionally, the following standard variables are available:"
-msgstr ""
+msgstr "I tillägg är följande standardvariabler tillgängliga:"
 
 # type: TP
 #: ../../man/deb-substvars.5:48
 #, no-wrap
 msgid "B<Arch>"
-msgstr ""
+msgstr "B<Arch>"
 
 # type: Plain text
 #: ../../man/deb-substvars.5:52
 msgid "The current build architecture (from B<dpkg --print-architecture>)."
-msgstr ""
+msgstr "Den aktuella byggarkitekturen (från B<dpkg --print-architecture>)."
 
 # type: TP
 #: ../../man/deb-substvars.5:52
@@ -1359,7 +1406,7 @@ msgstr "Version för källkodspaketet."
 #: ../../man/deb-substvars.5:55
 #, no-wrap
 msgid "B<source:Upstream-Version>"
-msgstr ""
+msgstr "B<source:Upstream-Version>"
 
 # type: Plain text
 #: ../../man/deb-substvars.5:59
@@ -1367,6 +1414,8 @@ msgid ""
 "The upstream source package version, including the Debian version epoch if "
 "any."
 msgstr ""
+"Version på uppströmskällkodspaketet, inklusive Debianversionens epok, om "
+"sådan finns."
 
 # type: TP
 #: ../../man/deb-substvars.5:59
@@ -1380,6 +1429,8 @@ msgid ""
 "The binary package version (which may differ from source:Version in a binNMU "
 "for example)."
 msgstr ""
+"Den binära paketversionen (som kan avvika från source:Version, till exempel "
+"i en binNMU)."
 
 # type: TP
 #: ../../man/deb-substvars.5:63
@@ -1394,6 +1445,10 @@ msgid ""
 "B<deprecated> as its meaning is different from its function, please use the "
 "B<source:Version> or B<binary:Version> as appropriate."
 msgstr ""
+"Versionen på källkodspaketet (från changelog-filen). Variabeln B<avråds> "
+"från eftersom betydelsen skiljer sig från funktionen, använd i stället "
+"B<source:Version> eller B<binary:Version> allt eftersom vad som är "
+"lämpligt."
 
 # type: TP
 #: ../../man/deb-substvars.5:68
@@ -1409,12 +1464,16 @@ msgid ""
 "that field. If this variable isn't set B<dpkg-gencontrol> will use B<du -k "
 "debian/tmp> to find the default value."
 msgstr ""
+"Den totala storleken på paketets installerade filer. Värdet kopieras in i "
+"motsvarande fält i kontrollfilen. Om du ställer in det kommer det att "
+"ersätta värdet på fältet. Om variabeln inte är satt kommer B<dpkg-gencontrol> "
+"att använda B<du -k debian/tmp> för att hitta det förvalda värdet."
 
 # type: TP
 #: ../../man/deb-substvars.5:77
 #, no-wrap
 msgid "B<Extra-Size>"
-msgstr ""
+msgstr "B<Extra-Size>"
 
 # type: Plain text
 #: ../../man/deb-substvars.5:86
@@ -1424,6 +1483,10 @@ msgid ""
 "set explicitly or using the default value) before it is copied into the "
 "B<Installed-Size> control file field."
 msgstr ""
+"Ytterligare diskutrymme som används när paketet installeras. Om värdet "
+"är satt kommer dess värde att läggas till B<Installed-Size>-variabelns "
+"värde (oavsett om den satts explicit eller om det förvalda värdet används) "
+"innan det kopieras till kontrollfilens fält B<Installed-Size>."
 
 # type: TP
 #: ../../man/deb-substvars.5:86
@@ -1438,12 +1501,15 @@ msgid ""
 "canonical capitalisation). Setting these variables has no effect other than "
 "on places where they are expanded explicitly."
 msgstr ""
+"Värdet på utdatafältet I<fältnamn> (som måste anges med rätt form av "
+"stora och små bokstäver). Om du sätter dessa variabler händer ingenting "
+"förutom där de explicit expanderas."
 
 # type: TP
 #: ../../man/deb-substvars.5:93
 #, no-wrap
 msgid "B<Format>"
-msgstr ""
+msgstr "B<Format>"
 
 # type: Plain text
 #: ../../man/deb-substvars.5:103
@@ -1452,29 +1518,33 @@ msgid ""
 "packaging scripts. If you set this variable the contents of the B<Format> "
 "field in the B<.changes> file will change too."
 msgstr ""
+"Formatet på filen B<.changes> som skapats av denna version av "
+"källkodspaketeringsskripten. Om du sätter denna variabel kommer innehållet "
+"i B<Format>-fältet i filen B<.changes> också att ändras."
 
 # type: TP
 #: ../../man/deb-substvars.5:103
 #, no-wrap
 msgid "B<Newline>, B<Space>, B<Tab>"
-msgstr ""
+msgstr "B<Newline>, B<Space>, B<Tab>"
 
 # type: Plain text
 #: ../../man/deb-substvars.5:106
 msgid "These variables each hold the corresponding character."
-msgstr ""
+msgstr "Dessa variabler innehåller motsvarande tecken (radbrytning, blanksteg, tabbsteg)."
 
 # type: TP
 #: ../../man/deb-substvars.5:106
 #, no-wrap
 msgid "B<shlibs:>I<dependencyfield>"
-msgstr ""
+msgstr "B<shlibs:>I<beroendefält>"
 
 # type: Plain text
 #: ../../man/deb-substvars.5:110
 msgid ""
 "Variable settings with names of this form are generated by B<dpkg-shlibdeps>."
 msgstr ""
+"Variabelinställningar på den här formen skapas av B<dpkg-shlibdeps>."
 
 # type: TP
 #: ../../man/deb-substvars.5:110
@@ -1485,7 +1555,7 @@ msgstr "B<dpkg:Upstream-Version>"
 # type: Plain text
 #: ../../man/deb-substvars.5:113
 msgid "The upstream version of dpkg."
-msgstr ""
+msgstr "Uppströmsversionen av dpkg."
 
 # type: TP
 #: ../../man/deb-substvars.5:113
@@ -1496,7 +1566,7 @@ msgstr "B<dpkg:Version>"
 # type: Plain text
 #: ../../man/deb-substvars.5:116
 msgid "The full version of dpkg."
-msgstr ""
+msgstr "Fullständing version av dpkg."
 
 # type: Plain text
 #: ../../man/deb-substvars.5:119
@@ -1504,6 +1574,8 @@ msgid ""
 "If a variable is referred to but not defined it generates a warning and an "
 "empty value is assumed."
 msgstr ""
+"Om en variabel refereras till men inte definieras kommer en varning att "
+"genereras och ett tomt värde används."
 
 # type: TP
 #: ../../man/deb-substvars.5:121
@@ -1522,6 +1594,8 @@ msgid ""
 "The point at which field overriding occurs compared to certain standard "
 "output field settings is rather confused."
 msgstr ""
+"Tidpunkten på fältöverstyrning inträffar jämfört med inställning av "
+"vissa standardutdatafält är ganska förvirrad."
 
 # type: Plain text
 #: ../../man/deb-substvars.5:135
@@ -1539,7 +1613,7 @@ msgstr ""
 #: ../../man/dpkg-parsechangelog.1:50 ../../man/dpkg-shlibdeps.1:132
 #: ../../man/dpkg-source.1:249 ../../man/dpkg-split.1:234
 msgid "Copyright (C) 1995-1996 Ian Jackson"
-msgstr ""
+msgstr "Upphovsrättsskyddad © 1995-1996 Ian Jackson"
 
 # type: Plain text
 #: ../../man/deb-substvars.5:140 ../../man/dpkg-buildpackage.1:195
@@ -2767,6 +2841,9 @@ msgid ""
 "information about status of installed or uninstalled packages, etc.  "
 "(Defaults to I</var/lib/dpkg>)"
 msgstr ""
+"Ändra förvald administrationskatalog, vilken innehåller flera filer som beskriver "
+"status för installerade eller avinstallerade pakete, osv. (standardvärde är "
+"I</var/lib/dpkg>)"
 
 # type: TP
 #: ../../man/dpkg.1:458
@@ -2799,6 +2876,8 @@ msgid ""
 "Changing B<root> changes B<instdir> to I<dir> and B<admindir> to I<dir>B</"
 "var/lib/dpkg>."
 msgstr ""
+"Genom att ändra B<rot> så ändras B<installationskatalog> till I<katalog> och "
+"B<administrationskatalog> till I<katalog>B</var/lib/dpkg>."
 
 # type: TP
 #: ../../man/dpkg.1:469
@@ -3235,6 +3314,7 @@ msgstr "2007-03-06"
 msgid ""
 "dpkg-architecture - set and determine the architecture for package building"
 msgstr ""
+"dpkg-architecture - ställ in och bestäm arkitektur för paket som byggs"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:9
@@ -3247,6 +3327,8 @@ msgid ""
 "dpkg-architecture does provide a facility to determine and set the build and "
 "host architecture for package building."
 msgstr ""
+"dpkg-architecture innehåller en funktion för att bestämma och ställa in "
+"bygg- och värdarkitekturerna för att bygga paket."
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:17
@@ -3254,6 +3336,8 @@ msgid ""
 "The build architecture is always determined by an external call to B<dpkg>"
 "(1), and can not be set at the command line."
 msgstr ""
+"Byggarkitekturen bestäms alltid av ett externt anrop till B<dpkg>(1) och kan "
+"inte ställas in på kommandoraden."
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:26
@@ -3266,6 +3350,13 @@ msgid ""
 "only specify one, because B<dpkg-architecture> will warn you if your choice "
 "does not match the default."
 msgstr ""
+"Du kan ange värdarkitektur genom att ange en av, eller båda, flaggorna "
+"B<-a> och B<-t>. Förvalet bestäms av ett externt anrop till B<gcc>(1), "
+"eller är detsamma som byggarkitekturen varken \\s-1CC\\s0 eller gcc "
+"är tillgängliga. Det räcket att ange en av B<-a> och B<-t>, värdet på "
+"den andra kommer ställas in till ett fungerande förval. Det är faktiskt "
+"oftast bättre att bara ange den ena eftersom B<dpkg-architecture> kommer "
+"varna dig om ditt val inte överensstämmer med förvalet."
 
 # type: SH
 #: ../../man/dpkg-architecture.1:27 ../../man/dpkg-deb.1:28
