Some minor linguistic clean-ups.

--- a/dselect/po/sv.po
+++ b/dselect/po/sv.po
@@ -1,5 +1,5 @@
 # Swedish translation of dpkg
-# Copyright 1999-2006 Software in the Public Interest
+# Copyright 1999-2007 Software in the Public Interest
 # Peter Karlsson <peterk@debian.org>, 1999-2007.
 # Daniel Nylander <po@danielnylander.se>, 2006.
 #
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dselect\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-05-08 04:15+0300\n"
-"PO-Revision-Date: 2007-07-29 07:38-0100\n"
+"PO-Revision-Date: 2007-07-29 11:58-0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -509,7 +509,7 @@ msgstr ""
 "mellan dem, paketbeskrivningarna och den interna kontrollinformationen.\n"
 "\n"
 "En samling \"föreslagna\" paket har beräknats, och de ursprungliga\n"
-"inställningarna i denna underlista har satts till att matcha dessa, så att "
+"inställningarna i underlistan har satts till att matcha dessa, så att "
 "du\n"
 "helt enkelt kan trycka Enter för att acceptera valen om du vill. Du kan\n"
 "avbryta ändringarna som orsakade problemen och gå tillbaka till huvudlistan\n"
@@ -580,7 +580,7 @@ msgstr ""
 " paket i dessa { \"U\"   - uppackat, men ännu ej konfigurerat\n"
 "     tillstånd { \"C\"   - halvt konfigurerat (ett fel uppstod)\n"
 "    är trasiga { \"I\"   - halvt installerat (ett fel uppstod)\n"
-" Gammal markering: vad som önskades innan denna lista visades\n"
+" Gammal markering: vad som önskades innan listan visades\n"
 " Markering: vad önskas för detta paket:\n"
 "  \"*\": markerat för att installeras eller uppgraderas\n"
 "  \"-\": markerat för att tas bort, men att behålla konfigurationsfilerna\n"
@@ -680,7 +680,7 @@ msgstr ""
 "dselect och dpkg kan göra automatiska installationer genom att ladda paket-\n"
 "filerna från en av flera olika platser.\n"
 "\n"
-"Denna lista låter dig välja en av dessa installationsmetoder.\n"
+"Listan låter dig välja en av dessa installationsmetoder.\n"
 "\n"
 "Flytta markeringsraden till den metod du vill använda och tryck Enter. Nu\n"
 "kommer du frågas om krävd information för att genomföra installationen.\n"
@@ -736,7 +736,7 @@ msgstr ""
 "(Detta är samma förflyttningstangenter som i paketlistan.)\n"
 "\n"
 "Avsluta:\n"
-" Enter   väljer denna metod och går till dess konfigurationsdialog\n"
+" Enter   väljer metoden och går till dess konfigurationsdialog\n"
 " x, X    avslutar utan att ändra eller ställa in installationsmetoden\n"
 "\n"
 "Diverse:\n"
@@ -897,8 +897,8 @@ msgid ""
 "  --license | --licence      Show the license.\n"
 "\n"
 msgstr ""
-"  --help                     Visa det här hjälpmeddelandet.\n"
-"  --version                  Visa versionen.\n"
+"  --help                     Visa detta hjälpmeddelande.\n"
+"  --version                  Visa versionsnummer.\n"
 "  --license | --licence      Visa licensen.\n"
 "\n"
 
