--- a/po/sv.po
+++ b/po/sv.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.13.11.0.1\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-05-24 19:33+0300\n"
-"PO-Revision-Date: 2007-07-14 17:16+0100\n"
+"PO-Revision-Date: 2007-07-29 11:58+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1438,7 +1438,7 @@ msgstr "kunde inte starta skalet (%.250s)"
 #: src/configure.c:518
 msgid "Don't forget to foreground (`fg') this process when you're done !\n"
 msgstr ""
-"Glöm inte att flytta denna process till förgrunden (\"fg\") när du är klar!\n"
+"Glöm inte att flytta processen till förgrunden (\"fg\") när du är klar!\n"
 
 #: src/configure.c:561
 #, c-format
@@ -2234,9 +2234,9 @@ msgid ""
 "  --license|--licence              Show the copyright licensing terms.\n"
 "\n"
 msgstr ""
-"  -h|--help                        Visa detta hjälpmeddelandet.\n"
-"  --version                        Visa versionsnummer\n"
-"  --license|--licence              Visa upphovsrättslicensvillkor\n"
+"  -h|--help                        Visa detta hjälpmeddelande.\n"
+"  --version                        Visa versionsnummer.\n"
+"  --license|--licence              Visa upphovsrättslicensvillkor.\n"
 
 #: src/main.c:94
 #, c-format
@@ -2584,7 +2584,7 @@ msgid ""
 " in this run !  Only configuring it once.\n"
 msgstr ""
 "Mer än en kopia av paketet %s har packats upp\n"
-" under denna körning! Konfigurerar det bara en gång.\n"
+" under körningen! Konfigurerar det bara en gång.\n"
 
 #: src/packages.c:269
 #, c-format
@@ -4331,10 +4331,10 @@ msgstr ""
 "\n"
 "Flaggor:\n"
 "  --unsafe     välj några ytterligare möjligen användbara alternativ.\n"
-"               varning: detta alternativ kan förstöra en i övrigt korrekt "
+"               varning: alternativet kan förstöra en i övrigt korrekt "
 "fil.\n"
 "  --help       visa detta hjälpmeddelande.\n"
-"  --version    visa versionen.\n"
+"  --version    visa versionsnummer.\n"
 
 #: scripts/cleanup-info.pl:66 scripts/install-info.pl:508
 #, perl-format
@@ -4472,7 +4472,7 @@ msgstr ""
 "  --test                   gör ingenting, bara demonstrera.\n"
 "  --quiet                  arbeta tyst, med minimal utdata.\n"
 "  --help                   visa detta hjälpmeddelande.\n"
-"  --version                visa versionen.\n"
+"  --version                visa versionsnummer.\n"
 "\n"
 "När du lägger till är förval --local och --divert <original>.distrib.\n"
 "När du tar bort måste --package eller --local samt --divert stämma om de\n"
@@ -4709,8 +4709,8 @@ msgstr ""
 "  --force                  tvinga ett kommando även om sundhetstestet "
 "misslyckas.\n"
 "  --quiet                  arbeta tyst, minimal utdata.\n"
-"  --help                   visa detta hjälpmmeddelande.\n"
-"  --version                visa versionen.\n"
+"  --help                   visa detta hjälpmeddelande.\n"
+"  --version                visa versionsnummer.\n"
 
 #: scripts/dpkg-statoverride.pl:100
 msgid "no mode specified"
@@ -4875,8 +4875,8 @@ msgstr ""
 "  --debug                  aktiverar felsökningsläge (visar mer "
 "information).\n"
 "  --quiet                  visa inte utdatameddelanden.\n"
-"  --help                   visar detta hjälpmeddelande.\n"
-"  --version                visar versionen.\n"
+"  --help                   visa detta hjälpmeddelande.\n"
+"  --version                visa versionsnummer.\n"
 
 #: scripts/install-info.pl:97
 #, perl-format
@@ -5116,7 +5116,7 @@ msgstr ""
 "  --verbose                informativ funktion, mer utdata.\n"
 "  --quiet                  tyst funktion, minimal utdata.\n"
 "  --help                   visa detta hjälpmeddelande.\n"
-"  --version                visa versionen.\n"
+"  --version                visa versionsnummer.\n"
 
 #: scripts/update-alternatives.pl:131
 msgid "invalid update mode"
